[ACPI] synchronize_kernel for idle-loop unload (Zwane Mwaikambo) http://bugzilla.kernel.org/show_bug.cgi?id=1716